周一离散课

--- a/docs/course_note/D1_DM/零碎记录.md
+++ b/docs/course_note/D1_DM/零碎记录.md
@@ -62,3 +62,13 @@ $$
 2. n个小球的所有取法即为$(1/(1-x))^n$
 3. 展开得到$x^k$的系数: $\binom {n+k-1}{k}$
 4. 这与我们使用**隔板法**时得到的结果是一样的
+- 在某些题设中小球的取数可以有上限, 需要自己去配系数
+- 但是不要混淆小球总数与小球的上限(上限一般是题目显式给你的)
+### 顺序有关与顺序无关
+- 前面取小球的的题就是一种顺序无关
+- 顺序有关: 按照第一步取法*第二步取法....去设计生成函数
+### 递推关系的生成函数
+- 对式子两边同时乘以$x^n$, 对n从k(让)到$\infty$求和, 得到:
+- 
+
+## 容斥原理
