--- a/docs/course_note/D1_DM/零碎记录.md
+++ b/docs/course_note/D1_DM/零碎记录.md
@@ -1,6 +1,6 @@
 > 第八周及以后的笔记都整理在这里了~
 
-> Week 8
+> **Week 8**
 ## 物体/盒子模型
 - 可识别物体放入可识别的盒子中
     - 盒子大小固定: 可以使用阶乘法
@@ -32,7 +32,7 @@
         - 非齐次部分解的结构为$(p_0*n^{0} + p_1*n^{1}+...+p_{k-1}*n^{k-1})*c^{m}$
         - 若c在齐次部分的解中出现过, 则还需在式子前乘$n^{m}$, 这里的m为重根次数
 ---
-> Week 9
+> **Week 9**
 ## 生成函数
 - 理解生成函数中的$x$: 形式变量/占位符, 并不关心他的收敛性或取值
 ### 卷积
@@ -62,13 +62,26 @@ $$
 2. n个小球的所有取法即为$(1/(1-x))^n$
 3. 展开得到$x^k$的系数: $\binom {n+k-1}{k}$
 4. 这与我们使用**隔板法**时得到的结果是一样的
-- 在某些题设中小球的取数可以有上限, 需要自己去配系数
+- 在某些题设中小球的取数有上限, 需要自己去配系数
+- 当分母中的多项式不能使用一个生成函数表达出来时, 我们就使用多个来表达
 - 但是不要混淆小球总数与小球的上限(上限一般是题目显式给你的)
 ### 顺序有关与顺序无关
 - 前面取小球的的题就是一种顺序无关
 - 顺序有关: 按照第一步取法*第二步取法....去设计生成函数
-### 递推关系的生成函数
-- 对式子两边同时乘以$x^n$, 对n从k(让)到$\infty$求和, 得到:
-- 
+### 用生成函数解决递推关系求系数的问题
+- 对式子两边同时乘以$x^n$, 对n从**k**到$\infty$求和(让每一项$x^p$的系数下标都不小于零)
+    - 进阶: 给你的递推关系式的度是**k**
+- 将$\sum$形式的表达式转化成生成函数减去前几项的表达式
+- 合并同类项, 计算出G(x)的表达式
+- 再进行因式分解, 得到一个个独立的生成函数
+- 最后由独立的生成函数反推出$a_n$
 
 ## 容斥原理
+- 
+
+
+## 图
+- {a,b}表示无向图里的边,(a,b)有向图
+
+### 闭包
+- 如何证明最小闭包: 证明构成最小的几个集合都是其他闭包的子集
